--- a/configs/sh2eb-elf/host-x86_64-w64-mingw32.config
+++ b/configs/sh2eb-elf/host-x86_64-w64-mingw32.config
@@ -30,7 +30,6 @@ CT_CONFIG_VERSION_ENV="4"
 CT_CONFIG_VERSION_CURRENT="4"
 CT_CONFIG_VERSION="4"
 CT_MODULES=y
-CT_EXPERIMENTAL=y
 CT_DEBUG_CT=y
 CT_DEBUG_INTERACTIVE=y
 CT_LOCAL_TARBALLS_DIR="${HOME}/src"
@@ -79,8 +78,9 @@ CT_ARCH_SUFFIX=""
 CT_OMIT_TARGET_VENDOR=y
 CT_ARCH_REQUIRES_MULTILIB=y
 CT_MULTILIB=y
-CT_ARCH_SUPPORTS_BOTH_MMU=y
-CT_ARCH_DEFAULT_HAS_MMU=y
+CT_ARCH_SUPPORTS_BOTH_MMU=n
+CT_ARCH_DEFAULT_HAS_MMU=n
+CT_ARCH_USE_MMU=n
 CT_ARCH_SUPPORTS_FLAT_FORMAT=y
 CT_ARCH_SUPPORTS_EITHER_ENDIAN=y
 CT_ARCH_DEFAULT_LE=y
@@ -93,7 +93,6 @@ CT_ARCH_32=y
 CT_ARCH_SUPPORTS_WITH_ENDIAN=y
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
-CT_WANTS_STATIC_LINK=y
 CT_TOOLCHAIN_PKGVERSION=""
 CT_TOOLCHAIN_BUGURL="http://github.com/ijacquez/libyaul-build-scripts"
 CT_TARGET_ALIAS_SED_EXPR=""
@@ -152,13 +151,13 @@ CT_LIBC_NONE_SHOW=y
 CT_LIBC_NONE_PKG_KSYM=""
 CT_ALL_LIBC_CHOICES="AVR_LIBC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE PICOLIBC UCLIBC_NG"
 CT_CC_SUPPORT_CXX=y
-CT_CC_SUPPORT_FORTRAN=y
-CT_CC_SUPPORT_ADA=y
-CT_CC_SUPPORT_D=y
-CT_CC_SUPPORT_JIT=y
-CT_CC_SUPPORT_OBJC=y
-CT_CC_SUPPORT_OBJCXX=y
-CT_CC_SUPPORT_GOLANG=y
+CT_CC_SUPPORT_FORTRAN=n
+CT_CC_SUPPORT_ADA=n
+CT_CC_SUPPORT_D=n
+CT_CC_SUPPORT_JIT=
+CT_CC_SUPPORT_OBJC=n
+CT_CC_SUPPORT_OBJCXX=n
+CT_CC_SUPPORT_GOLANG=n
 CT_CC_GCC=y
 CT_CC="gcc"
 CT_CC_CHOICE_KSYM="GCC"
