--- a/configs/sh2eb-elf/host-x86_64-w64-mingw32.config
+++ b/configs/sh2eb-elf/host-x86_64-w64-mingw32.config
@@ -295,7 +295,7 @@ CT_ISL_PATCH_GLOBAL=y
 CT_ISL_PATCH_ORDER="global"
 CT_ISL_V_0_24=y
 CT_ISL_VERSION="0.24"
-CT_ISL_MIRRORS="https://libisl.sourceforge.io"
+CT_ISL_MIRRORS="https://gcc.gnu.org/pub/gcc/infrastructure"
 CT_ISL_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
