--- a/configs/sh2eb-elf/native-macosx.config
+++ b/configs/sh2eb-elf/native-macosx.config
@@ -79,8 +79,8 @@ CT_ARCH_SUFFIX=""
 CT_OMIT_TARGET_VENDOR=y
 CT_ARCH_REQUIRES_MULTILIB=y
 CT_MULTILIB=y
-CT_ARCH_SUPPORTS_BOTH_MMU=y
-CT_ARCH_DEFAULT_HAS_MMU=y
+CT_ARCH_SUPPORTS_BOTH_MMU=n
+CT_ARCH_DEFAULT_HAS_MMU=n
 CT_ARCH_SUPPORTS_FLAT_FORMAT=y
 CT_ARCH_SUPPORTS_EITHER_ENDIAN=y
 CT_ARCH_DEFAULT_LE=y
@@ -95,7 +95,7 @@ CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
 CT_WANTS_STATIC_LINK=y
 CT_TOOLCHAIN_PKGVERSION=""
-CT_TOOLCHAIN_BUGURL="http://github.com/ijacquez/libyaul-build-scripts"
+CT_TOOLCHAIN_BUGURL="http://github.com/yaul-org/libyaul-build-scripts"
 CT_TARGET_ALIAS_SED_EXPR=""
 CT_TARGET_ALIAS=""
 CT_CROSS=y
@@ -152,13 +152,13 @@ CT_LIBC_NONE_SHOW=y
 CT_LIBC_NONE_PKG_KSYM=""
 CT_ALL_LIBC_CHOICES="AVR_LIBC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE PICOLIBC UCLIBC_NG"
 CT_CC_SUPPORT_CXX=y
-CT_CC_SUPPORT_FORTRAN=y
-CT_CC_SUPPORT_ADA=y
-CT_CC_SUPPORT_D=y
-CT_CC_SUPPORT_JIT=y
-CT_CC_SUPPORT_OBJC=y
-CT_CC_SUPPORT_OBJCXX=y
-CT_CC_SUPPORT_GOLANG=y
+CT_CC_SUPPORT_FORTRAN=n
+CT_CC_SUPPORT_ADA=n
+CT_CC_SUPPORT_D=n
+CT_CC_SUPPORT_JIT=n
+CT_CC_SUPPORT_OBJC=n
+CT_CC_SUPPORT_OBJCXX=n
+CT_CC_SUPPORT_GOLANG=n
 CT_CC_GCC=y
 CT_CC="gcc"
 CT_CC_CHOICE_KSYM="GCC"
@@ -296,7 +296,7 @@ CT_ISL_PATCH_GLOBAL=y
 CT_ISL_PATCH_ORDER="global"
 CT_ISL_V_0_24=y
 CT_ISL_VERSION="0.24"
-CT_ISL_MIRRORS="https://libisl.sourceforge.io"
+CT_ISL_MIRRORS="https://gcc.gnu.org/pub/gcc/infrastructure"
 CT_ISL_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
