--- a/configs/sh2eb-elf/host-x86_64-w64-mingw32.config
+++ b/configs/sh2eb-elf/host-x86_64-w64-mingw32.config
@@ -154,7 +154,7 @@ CT_CC_SUPPORT_CXX=y
 CT_CC_SUPPORT_FORTRAN=n
 CT_CC_SUPPORT_ADA=n
 CT_CC_SUPPORT_D=n
-CT_CC_SUPPORT_JIT=
+CT_CC_SUPPORT_JIT=n
 CT_CC_SUPPORT_OBJC=n
 CT_CC_SUPPORT_OBJCXX=n
 CT_CC_SUPPORT_GOLANG=n
