--- a/configs/sh2eb-elf/native-linux.config
+++ b/configs/sh2eb-elf/native-linux.config
@@ -30,7 +30,6 @@ CT_CONFIG_VERSION_ENV="4"
 CT_CONFIG_VERSION_CURRENT="4"
 CT_CONFIG_VERSION="4"
 CT_MODULES=y
-CT_EXPERIMENTAL=y
 CT_DEBUG_CT=y
 CT_DEBUG_INTERACTIVE=y
 CT_LOCAL_TARBALLS_DIR="${HOME}/src"
@@ -81,6 +80,7 @@ CT_ARCH_REQUIRES_MULTILIB=y
 CT_MULTILIB=y
 CT_ARCH_SUPPORTS_BOTH_MMU=n
 CT_ARCH_DEFAULT_HAS_MMU=n
+CT_ARCH_USE_MMU=n
 CT_ARCH_SUPPORTS_FLAT_FORMAT=y
 CT_ARCH_SUPPORTS_EITHER_ENDIAN=y
 CT_ARCH_DEFAULT_LE=y
@@ -93,7 +93,6 @@ CT_ARCH_32=y
 CT_ARCH_SUPPORTS_WITH_ENDIAN=y
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
-CT_WANTS_STATIC_LINK=y
 CT_TOOLCHAIN_PKGVERSION=""
 CT_TOOLCHAIN_BUGURL="http://github.com/yaul-org/libyaul-build-scripts"
 CT_TARGET_ALIAS_SED_EXPR=""
