--- a/configs/sh2eb-elf/native-macosx.config
+++ b/configs/sh2eb-elf/native-macosx.config
@@ -8,6 +8,7 @@ CT_CONFIGURE_has_ninja=y
 CT_CONFIGURE_has_rsync=y
 CT_CONFIGURE_has_make_3_81_or_newer=y
 CT_CONFIGURE_has_make_4_0_or_newer=y
+CT_CONFIGURE_has_make_4_4_or_newer=y
 CT_CONFIGURE_has_libtool_2_4_or_newer=y
 CT_CONFIGURE_has_libtoolize_2_4_or_newer=y
 CT_CONFIGURE_has_autoconf_2_65_or_newer=y
@@ -24,7 +25,7 @@ CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_VERSION="1.26.0.22_daf19e1"
+CT_VERSION="1.26.0.30_cd0d146"
 CT_VCHECK=""
 CT_CONFIG_VERSION_ENV="4"
 CT_CONFIG_VERSION_CURRENT="4"
@@ -41,6 +42,8 @@ CT_BUILD_DIR="${CT_BUILD_TOP_DIR}/build"
 CT_PREFIX_DIR="${CT_PREFIX:-${HOME}/.local/x-tools}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
 CT_RM_RF_PREFIX_DIR=y
 CT_REMOVE_DOCS=y
+CT_INSTALL_LICENSES=y
+CT_PREFIX_DIR_RO=y
 CT_STRIP_HOST_TOOLCHAIN_EXECUTABLES=y
 CT_STRIP_TARGET_TOOLCHAIN_EXECUTABLES=y
 CT_DOWNLOAD_AGENT_WGET=y
@@ -74,13 +77,14 @@ CT_ARCH_SH_SHOW=y
 CT_ARCH_SH_PKG_KSYM=""
 CT_ARCH_SH_SH2=y
 CT_ARCH_SH_VARIANT="sh2"
-CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
+CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 PARISC POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
 CT_ARCH_SUFFIX=""
 CT_OMIT_TARGET_VENDOR=y
 CT_ARCH_REQUIRES_MULTILIB=y
 CT_MULTILIB=y
-CT_ARCH_SUPPORTS_BOTH_MMU=n
-CT_ARCH_DEFAULT_HAS_MMU=n
+CT_ARCH_SUPPORTS_BOTH_MMU=y
+CT_ARCH_DEFAULT_HAS_MMU=y
+CT_ARCH_USE_MMU=y
 CT_ARCH_SUPPORTS_FLAT_FORMAT=y
 CT_ARCH_SUPPORTS_EITHER_ENDIAN=y
 CT_ARCH_DEFAULT_LE=y
@@ -94,6 +98,8 @@ CT_ARCH_SUPPORTS_WITH_ENDIAN=y
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
 CT_WANTS_STATIC_LINK=y
+CT_WANTS_STATIC_LINK_CXX=y
+CT_SHOW_CT_VERSION=y
 CT_TOOLCHAIN_PKGVERSION=""
 CT_TOOLCHAIN_BUGURL="http://github.com/yaul-org/libyaul-build-scripts"
 CT_TARGET_ALIAS_SED_EXPR=""
@@ -123,15 +129,15 @@ CT_BINUTILS_PKG_NAME="binutils"
 CT_BINUTILS_SRC_RELEASE=y
 CT_BINUTILS_PATCH_GLOBAL=y
 CT_BINUTILS_PATCH_ORDER="global"
-CT_BINUTILS_V_2_38=y
-CT_BINUTILS_VERSION="2.38"
+CT_BINUTILS_V_2_40=y
+CT_BINUTILS_VERSION="2.40"
 CT_BINUTILS_MIRRORS="$(CT_Mirrors GNU binutils) $(CT_Mirrors sourceware binutils/releases)"
 CT_BINUTILS_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
 CT_BINUTILS_SIGNATURE_FORMAT="packed/.sig"
-CT_BINUTILS_2_39_or_older=y
-CT_BINUTILS_older_than_2_39=y
+CT_BINUTILS_later_than_2_39=y
+CT_BINUTILS_2_39_or_later=y
 CT_BINUTILS_later_than_2_30=y
 CT_BINUTILS_2_30_or_later=y
 CT_BINUTILS_later_than_2_27=y
@@ -141,6 +147,7 @@ CT_BINUTILS_2_26_or_later=y
 CT_BINUTILS_LINKER_LD=y
 CT_BINUTILS_LINKERS_LIST="ld"
 CT_BINUTILS_LINKER_DEFAULT="bfd"
+CT_BINUTILS_RELRO=m
 CT_BINUTILS_DETERMINISTIC_ARCHIVES=y
 CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 CT_ALL_BINUTILS_CHOICES="BINUTILS"
@@ -152,13 +159,13 @@ CT_LIBC_NONE_SHOW=y
 CT_LIBC_NONE_PKG_KSYM=""
 CT_ALL_LIBC_CHOICES="AVR_LIBC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE PICOLIBC UCLIBC_NG"
 CT_CC_SUPPORT_CXX=y
-CT_CC_SUPPORT_FORTRAN=n
-CT_CC_SUPPORT_ADA=n
-CT_CC_SUPPORT_D=n
-CT_CC_SUPPORT_JIT=n
-CT_CC_SUPPORT_OBJC=n
-CT_CC_SUPPORT_OBJCXX=n
-CT_CC_SUPPORT_GOLANG=n
+CT_CC_SUPPORT_FORTRAN=y
+CT_CC_SUPPORT_ADA=y
+CT_CC_SUPPORT_D=y
+CT_CC_SUPPORT_JIT=y
+CT_CC_SUPPORT_OBJC=y
+CT_CC_SUPPORT_OBJCXX=y
+CT_CC_SUPPORT_GOLANG=y
 CT_CC_GCC=y
 CT_CC="gcc"
 CT_CC_CHOICE_KSYM="GCC"
@@ -200,12 +207,17 @@ CT_GCC_later_than_4_9=y
 CT_GCC_4_9_or_later=y
 CT_CC_GCC_HAS_LIBMPX=y
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
-CT_CC_GCC_EXTRA_CONFIG_ARRAY="--disable-cld --disable-initfini-array --disable-largefile --disable-hosted-libstdcxx --disable-libstdc__-v3 --disable-libstdcxx-pch --disable-libstdcxx-threads --disable-libstdcxx-time --disable-objc-gc --disable-rpath --disable-dlopen --disable-shared --disable-threads --disable-tls --disable-win32-registry --disable-decimal-float --enable-cxx-flags"
+CT_CC_GCC_EXTRA_CONFIG_ARRAY="--disable-cld --disable-initfini-array --enable-largefile --disable-hosted-libstdcxx --disable-libstdc__-v3 --disable-libstdcxx-pch --disable-libstdcxx-threads --disable-libstdcxx-time --disable-objc-gc --disable-rpath --disable-dlopen --disable-shared --disable-threads --disable-tls --disable-win32-registry --disable-decimal-float --enable-cxx-flags"
 CT_CC_GCC_MULTILIB_LIST=""
+CT_CC_GCC_STATIC_LIBSTDCXX=y
+CT_CC_GCC_CONFIG_TLS=m
 CT_CC_GCC_USE_GRAPHITE=y
 CT_CC_GCC_USE_LTO=y
+CT_CC_GCC_LTO_ZSTD=m
+CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
 CT_CC_GCC_TM_CLONE_REGISTRY=m
 CT_CC_GCC_DISABLE_PCH=y
+CT_CC_GCC_LDBL_128=m
 CT_CC_GCC_LNK_HASH_STYLE_DEFAULT=y
 CT_CC_GCC_LNK_HASH_STYLE=""
 CT_CC_GCC_DEC_FLOATS_NO=y
@@ -237,9 +249,6 @@ CT_GDB_later_than_10=y
 CT_GDB_10_or_later=y
 CT_GDB_later_than_8_3=y
 CT_GDB_8_3_or_later=y
-CT_GDB_CROSS=n
-CT_GDB_CROSS_STATIC=n
-CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
 CT_GDB_GDBSERVER_TOPLEVEL=y
 CT_ALL_DEBUG_CHOICES="DUMA GDB LTRACE STRACE"
 CT_COMP_LIBS_EXPAT=y
@@ -296,7 +305,7 @@ CT_ISL_PATCH_GLOBAL=y
 CT_ISL_PATCH_ORDER="global"
 CT_ISL_V_0_24=y
 CT_ISL_VERSION="0.24"
-CT_ISL_MIRRORS="https://gcc.gnu.org/pub/gcc/infrastructure"
+CT_ISL_MIRRORS="https://libisl.sourceforge.io"
 CT_ISL_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
@@ -385,6 +394,20 @@ CT_ZLIB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ZLIB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ZLIB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_ZLIB_SIGNATURE_FORMAT="packed/.asc"
+CT_COMP_LIBS_ZSTD=y
+CT_COMP_LIBS_ZSTD_PKG_KSYM="ZSTD"
+CT_ZSTD_DIR_NAME="zstd"
+CT_ZSTD_PKG_NAME="zstd"
+CT_ZSTD_SRC_RELEASE=y
+CT_ZSTD_PATCH_GLOBAL=y
+CT_ZSTD_PATCH_ORDER="global"
+CT_ZSTD_V_1_5_5=y
+CT_ZSTD_VERSION="1.5.5"
+CT_ZSTD_MIRRORS="https://github.com/facebook/zstd/releases/download/v${CT_ZSTD_VERSION} https://www.zstd.net/"
+CT_ZSTD_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
+CT_ZSTD_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
+CT_ZSTD_ARCHIVE_FORMATS=".tar.gz"
+CT_ZSTD_SIGNATURE_FORMAT="packed/.sig"
 CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP GNUPRUMCU ISL LIBELF LIBICONV MPC MPFR NCURSES NEWLIB_NANO PICOLIBC ZLIB ZSTD"
 CT_LIBICONV_NEEDED=y
 CT_GETTEXT_NEEDED=y
@@ -392,18 +415,18 @@ CT_GMP_NEEDED=y
 CT_MPFR_NEEDED=y
 CT_ISL_NEEDED=y
 CT_MPC_NEEDED=y
-CT_EXPAT_NEEDED=y
 CT_NCURSES_NEEDED=y
 CT_ZLIB_NEEDED=y
+CT_ZSTD_NEEDED=y
 CT_LIBICONV=y
 CT_GETTEXT=y
 CT_GMP=y
 CT_MPFR=y
 CT_ISL=y
 CT_MPC=y
-CT_EXPAT=y
 CT_NCURSES=y
 CT_ZLIB=y
+CT_ZSTD=y
 CT_COMP_TOOLS_FOR_HOST=y
 CT_COMP_TOOLS_MAKE=y
 CT_COMP_TOOLS_MAKE_PKG_KSYM="MAKE"
