--- a/configs/helpers/target-i686-pc-linux-gnu.config
+++ b/configs/helpers/target-i686-pc-linux-gnu.config
@@ -100,7 +100,7 @@ CT_STATIC_TOOLCHAIN=y
 CT_SHOW_CT_VERSION=y
 CT_TOOLCHAIN_PKGVERSION=""
 CT_TOOLCHAIN_BUGURL=""
-CT_TARGET_VENDOR="unknown"
+CT_TARGET_VENDOR="pc"
 CT_TARGET_ALIAS_SED_EXPR=""
 CT_TARGET_ALIAS=""
 CT_CROSS=y
