--- a/configs/helpers/target-x86_64-w64-mingw32.config
+++ b/configs/helpers/target-x86_64-w64-mingw32.config
@@ -26,25 +26,23 @@ CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
 CT_VERSION="1.26.0.30_cd0d146"
-CT_VCHECK=""
+CT_VCHECK="load"
 CT_CONFIG_VERSION_ENV="4"
 CT_CONFIG_VERSION_CURRENT="4"
 CT_CONFIG_VERSION="4"
 CT_MODULES=y
-CT_DEBUG_CT=y
-CT_DEBUG_INTERACTIVE=y
+CT_EXPERIMENTAL=y
 CT_LOCAL_TARBALLS_DIR="${HOME}/src"
 CT_SAVE_TARBALLS=y
 CT_WORK_DIR="${CT_TOP_DIR}/.build"
 CT_BUILD_TOP_DIR="${CT_WORK_DIR:-${CT_TOP_DIR}/.build}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
 CT_BUILD_DIR="${CT_BUILD_TOP_DIR}/build"
-CT_PREFIX_DIR="${CT_PREFIX:-${HOME}/.local/x-tools}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
+CT_PREFIX_DIR="${CT_PREFIX:-${HOME}/x-tools}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
 CT_RM_RF_PREFIX_DIR=y
 CT_REMOVE_DOCS=y
 CT_INSTALL_LICENSES=y
 CT_PREFIX_DIR_RO=y
 CT_STRIP_HOST_TOOLCHAIN_EXECUTABLES=y
-CT_STRIP_TARGET_TOOLCHAIN_EXECUTABLES=y
 CT_DOWNLOAD_AGENT_WGET=y
 CT_CONNECT_TIMEOUT=10
 CT_DOWNLOAD_WGET_OPTIONS="--passive-ftp --tries=3 -nc --progress=dot:binary"
@@ -69,52 +67,56 @@ CT_LOG_LEVEL_MAX="EXTRA"
 CT_LOG_PROGRESS_BAR=y
 CT_LOG_TO_FILE=y
 CT_LOG_FILE_COMPRESS=y
-CT_ARCH_SH=y
-CT_ARCH="sh"
-CT_ARCH_CHOICE_KSYM="SH"
-CT_ARCH_SH_SHOW=y
-CT_ARCH_SH_PKG_KSYM=""
-CT_ARCH_SH_SH2=y
-CT_ARCH_SH_VARIANT="sh2"
+CT_ARCH_X86=y
+CT_ARCH="x86"
+CT_ARCH_CHOICE_KSYM="X86"
+CT_ARCH_CPU=""
+CT_ARCH_TUNE=""
+CT_ARCH_X86_SHOW=y
+CT_ARCH_X86_PKG_KSYM=""
 CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 PARISC POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
 CT_ARCH_SUFFIX=""
-CT_OMIT_TARGET_VENDOR=y
-CT_ARCH_REQUIRES_MULTILIB=y
 CT_MULTILIB=y
-CT_ARCH_SUPPORTS_BOTH_MMU=y
-CT_ARCH_DEFAULT_HAS_MMU=y
-CT_ARCH_SUPPORTS_FLAT_FORMAT=y
-CT_ARCH_SUPPORTS_EITHER_ENDIAN=y
-CT_ARCH_DEFAULT_LE=y
-CT_ARCH_BE=y
-CT_ARCH_ENDIAN="big"
+CT_ARCH_USE_MMU=y
+CT_ARCH_SUPPORTS_LIBSANITIZER=y
 CT_ARCH_SUPPORTS_32=y
+CT_ARCH_SUPPORTS_64=y
 CT_ARCH_DEFAULT_32=y
-CT_ARCH_BITNESS=32
-CT_ARCH_32=y
-CT_ARCH_SUPPORTS_WITH_ENDIAN=y
+CT_ARCH_BITNESS=64
+CT_ARCH_64=y
+CT_ARCH_SUPPORTS_WITH_32_64=y
+CT_ARCH_SUPPORTS_WITH_ARCH=y
+CT_ARCH_SUPPORTS_WITH_CPU=y
+CT_ARCH_SUPPORTS_WITH_TUNE=y
+CT_ARCH_ARCH=""
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
+CT_FORCE_SYSROOT=y
+CT_USE_SYSROOT=y
+CT_SYSROOT_NAME="sysroot"
+CT_SYSROOT_DIR_PREFIX=""
+CT_WANTS_STATIC_LINK=y
+CT_WANTS_STATIC_LINK_CXX=y
 CT_SHOW_CT_VERSION=y
 CT_TOOLCHAIN_PKGVERSION=""
-CT_TOOLCHAIN_BUGURL="http://github.com/yaul-org/libyaul-build-scripts"
+CT_TOOLCHAIN_BUGURL=""
+CT_TARGET_VENDOR="w64"
 CT_TARGET_ALIAS_SED_EXPR=""
 CT_TARGET_ALIAS=""
-CT_CANADIAN=y
-CT_TOOLCHAIN_TYPE="canadian"
+CT_CROSS=y
+CT_TOOLCHAIN_TYPE="cross"
 CT_BUILD=""
 CT_BUILD_PREFIX=""
 CT_BUILD_SUFFIX=""
-CT_HOST="x86_64-w64-mingw32"
-CT_HOST_PREFIX=""
-CT_HOST_SUFFIX=""
-CT_BARE_METAL=y
-CT_KERNEL_BARE_METAL=y
-CT_KERNEL="bare-metal"
-CT_KERNEL_CHOICE_KSYM="BARE_METAL"
-CT_KERNEL_BARE_METAL_SHOW=y
-CT_KERNEL_BARE_METAL_PKG_KSYM=""
+CT_WINDOWS=y
+CT_KERNEL_SUPPORTS_SHARED_LIBS=y
+CT_KERNEL_WINDOWS=y
+CT_KERNEL="windows"
+CT_KERNEL_CHOICE_KSYM="WINDOWS"
+CT_KERNEL_WINDOWS_SHOW=y
+CT_KERNEL_WINDOWS_PKG_KSYM=""
 CT_ALL_KERNEL_CHOICES="BARE_METAL LINUX WINDOWS"
+CT_SHARED_LIBS=y
 CT_ARCH_BINFMT_ELF=y
 CT_BINUTILS_BINUTILS=y
 CT_BINUTILS="binutils"
@@ -126,6 +128,7 @@ CT_BINUTILS_USE_GNU=y
 CT_BINUTILS_USE="BINUTILS"
 CT_BINUTILS_PKG_NAME="binutils"
 CT_BINUTILS_SRC_RELEASE=y
+CT_BINUTILS_PATCH_GLOBAL=y
 CT_BINUTILS_PATCH_ORDER="global"
 CT_BINUTILS_V_2_40=y
 CT_BINUTILS_VERSION="2.40"
@@ -142,20 +145,50 @@ CT_BINUTILS_later_than_2_27=y
 CT_BINUTILS_2_27_or_later=y
 CT_BINUTILS_later_than_2_26=y
 CT_BINUTILS_2_26_or_later=y
+CT_BINUTILS_GOLD_SUPPORTS_ARCH=y
+CT_BINUTILS_GOLD_SUPPORT=y
+CT_BINUTILS_FORCE_LD_BFD_DEFAULT=y
 CT_BINUTILS_LINKER_LD=y
 CT_BINUTILS_LINKERS_LIST="ld"
 CT_BINUTILS_LINKER_DEFAULT="bfd"
+CT_BINUTILS_PLUGINS=y
 CT_BINUTILS_RELRO=m
 CT_BINUTILS_DETERMINISTIC_ARCHIVES=y
 CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 CT_ALL_BINUTILS_CHOICES="BINUTILS"
-CT_LIBC_NONE=y
-CT_LIBC="none"
-CT_LIBC_CHOICE_KSYM="NONE"
-CT_THREADS="none"
-CT_LIBC_NONE_SHOW=y
-CT_LIBC_NONE_PKG_KSYM=""
+CT_LIBC_MINGW_W64=y
+CT_LIBC="mingw-w64"
+CT_LIBC_CHOICE_KSYM="MINGW_W64"
+CT_THREADS="posix"
+CT_LIBC_MINGW_W64_SHOW=y
+CT_LIBC_MINGW_W64_PKG_KSYM="MINGW_W64"
+CT_MINGW_W64_DIR_NAME="mingw-w64"
+CT_MINGW_W64_PKG_NAME="mingw-w64"
+CT_MINGW_W64_SRC_RELEASE=y
+CT_MINGW_W64_PATCH_GLOBAL=y
+CT_MINGW_W64_PATCH_ORDER="global"
+CT_MINGW_W64_V_V11_0=y
+CT_MINGW_W64_VERSION="v11.0.1"
+CT_MINGW_W64_MIRRORS="http://downloads.sourceforge.net/sourceforge/mingw-w64 https://downloads.sourceforge.net/project/mingw-w64/mingw-w64/mingw-w64-release/"
+CT_MINGW_W64_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
+CT_MINGW_W64_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
+CT_MINGW_W64_ARCHIVE_FORMATS=".tar.bz2 .zip"
+CT_MINGW_W64_SIGNATURE_FORMAT="packed/.sig"
+CT_MINGW_SECURE_API=y
+CT_MINGW_DEFAULT_MSVCRT_DEFAULT=y
+CT_MINGW_DIRECTX=y
+CT_MINGW_DDK=y
+CT_MINGW_TOOLS=y
+CT_MINGW_TOOL_LIST_ARRAY="gendef genidl genlib genpeimg widl"
 CT_ALL_LIBC_CHOICES="AVR_LIBC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE PICOLIBC UCLIBC_NG"
+CT_LIBC_SUPPORT_THREADS_ANY=y
+CT_LIBC_SUPPORT_THREADS_NATIVE=y
+CT_LIBC_SUPPORT_THREADS_POSIX=y
+CT_THREADS_POSIX=y
+CT_CREATE_LDSO_CONF=y
+CT_LDSO_CONF_EXTRA_DIRS_ARRAY=""
+CT_LIBC_XLDD=y
+CT_CC_CORE_NEEDED=y
 CT_CC_SUPPORT_CXX=y
 CT_CC_SUPPORT_FORTRAN=y
 CT_CC_SUPPORT_ADA=y
@@ -174,6 +207,7 @@ CT_GCC_USE_GNU=y
 CT_GCC_USE="GCC"
 CT_GCC_PKG_NAME="gcc"
 CT_GCC_SRC_RELEASE=y
+CT_GCC_PATCH_GLOBAL=y
 CT_GCC_PATCH_ORDER="global"
 CT_GCC_V_13=y
 CT_GCC_VERSION="13.2.0"
@@ -202,9 +236,11 @@ CT_GCC_later_than_5=y
 CT_GCC_5_or_later=y
 CT_GCC_later_than_4_9=y
 CT_GCC_4_9_or_later=y
+CT_CC_GCC_ENABLE_PLUGINS=y
 CT_CC_GCC_HAS_LIBMPX=y
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
-CT_CC_GCC_EXTRA_CONFIG_ARRAY="--disable-cld --disable-initfini-array --enable-largefile --disable-hosted-libstdcxx --disable-libstdc__-v3 --disable-libstdcxx-pch --disable-libstdcxx-threads --disable-libstdcxx-time --disable-objc-gc --disable-rpath --disable-dlopen --disable-shared --disable-threads --disable-tls --disable-win32-registry --disable-decimal-float --enable-cxx-flags"
+CT_CC_GCC_CORE_EXTRA_CONFIG_ARRAY=""
+CT_CC_GCC_EXTRA_CONFIG_ARRAY=""
 CT_CC_GCC_MULTILIB_LIST=""
 CT_CC_GCC_STATIC_LIBSTDCXX=y
 CT_CC_GCC_CONFIG_TLS=m
@@ -212,77 +248,26 @@ CT_CC_GCC_USE_GRAPHITE=y
 CT_CC_GCC_USE_LTO=y
 CT_CC_GCC_LTO_ZSTD=m
 CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
+CT_CC_GCC_LIBSTDCXX_VERBOSE=m
+CT_CC_CXA_ATEXIT=y
 CT_CC_GCC_TM_CLONE_REGISTRY=m
-CT_CC_GCC_DISABLE_PCH=y
+CT_CC_GCC_SJLJ_EXCEPTIONS=m
 CT_CC_GCC_LDBL_128=m
 CT_CC_GCC_LNK_HASH_STYLE_DEFAULT=y
 CT_CC_GCC_LNK_HASH_STYLE=""
-CT_CC_GCC_DEC_FLOATS_NO=y
-CT_CC_GCC_DEC_FLOATS="no"
+CT_CC_GCC_DEC_FLOATS_AUTO=y
+CT_CC_GCC_DEC_FLOATS=""
 CT_ALL_CC_CHOICES="GCC"
 CT_CC_LANG_CXX=y
-CT_DEBUG_GDB=y
-CT_DEBUG_GDB_PKG_KSYM="GDB"
-CT_GDB_DIR_NAME="gdb"
-CT_GDB_PKG_NAME="gdb"
-CT_GDB_SRC_RELEASE=y
-CT_GDB_PATCH_ORDER="global"
-CT_GDB_V_11=y
-CT_GDB_VERSION="11.2"
-CT_GDB_MIRRORS="$(CT_Mirrors GNU gdb) $(CT_Mirrors sourceware gdb/releases)"
-CT_GDB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_GDB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_GDB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
-CT_GDB_SIGNATURE_FORMAT=""
-CT_GDB_13_or_older=y
-CT_GDB_older_than_13=y
-CT_GDB_12_or_older=y
-CT_GDB_older_than_12=y
-CT_GDB_later_than_11=y
-CT_GDB_11_or_later=y
-CT_GDB_later_than_10=y
-CT_GDB_10_or_later=y
-CT_GDB_later_than_8_3=y
-CT_GDB_8_3_or_later=y
-CT_GDB_CROSS=y
-CT_GDB_CROSS_STATIC=y
-CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
-CT_GDB_GDBSERVER_TOPLEVEL=y
+CT_CC_LANG_FORTRAN=y
+CT_CC_LANG_OTHERS=""
 CT_ALL_DEBUG_CHOICES="DUMA GDB LTRACE STRACE"
-CT_COMP_LIBS_EXPAT=y
-CT_COMP_LIBS_EXPAT_PKG_KSYM="EXPAT"
-CT_EXPAT_DIR_NAME="expat"
-CT_EXPAT_PKG_NAME="expat"
-CT_EXPAT_SRC_RELEASE=y
-CT_EXPAT_PATCH_ORDER="global"
-CT_EXPAT_V_2_5=y
-CT_EXPAT_VERSION="2.5.0"
-CT_EXPAT_MIRRORS="http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION} https://github.com/libexpat/libexpat/releases/download/R_${CT_EXPAT_VERSION//./_}"
-CT_EXPAT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_EXPAT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_EXPAT_ARCHIVE_FORMATS=".tar.xz .tar.lz .tar.bz2 .tar.gz"
-CT_EXPAT_SIGNATURE_FORMAT=""
-CT_COMP_LIBS_GETTEXT=y
-CT_COMP_LIBS_GETTEXT_PKG_KSYM="GETTEXT"
-CT_GETTEXT_DIR_NAME="gettext"
-CT_GETTEXT_PKG_NAME="gettext"
-CT_GETTEXT_SRC_RELEASE=y
-CT_GETTEXT_PATCH_ORDER="global"
-CT_GETTEXT_V_0_21=y
-CT_GETTEXT_VERSION="0.21"
-CT_GETTEXT_MIRRORS="$(CT_Mirrors GNU gettext)"
-CT_GETTEXT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_GETTEXT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_GETTEXT_ARCHIVE_FORMATS=".tar.xz .tar.gz"
-CT_GETTEXT_SIGNATURE_FORMAT="packed/.sig"
-CT_GETTEXT_0_21_or_later=y
-CT_GETTEXT_0_21_or_older=y
-CT_GETTEXT_INCOMPATIBLE_WITH_UCLIBC_NG=y
 CT_COMP_LIBS_GMP=y
 CT_COMP_LIBS_GMP_PKG_KSYM="GMP"
 CT_GMP_DIR_NAME="gmp"
 CT_GMP_PKG_NAME="gmp"
 CT_GMP_SRC_RELEASE=y
+CT_GMP_PATCH_GLOBAL=y
 CT_GMP_PATCH_ORDER="global"
 CT_GMP_V_6_2=y
 CT_GMP_VERSION="6.2.1"
@@ -296,9 +281,10 @@ CT_COMP_LIBS_ISL_PKG_KSYM="ISL"
 CT_ISL_DIR_NAME="isl"
 CT_ISL_PKG_NAME="isl"
 CT_ISL_SRC_RELEASE=y
+CT_ISL_PATCH_GLOBAL=y
 CT_ISL_PATCH_ORDER="global"
-CT_ISL_V_0_24=y
-CT_ISL_VERSION="0.24"
+CT_ISL_V_0_26=y
+CT_ISL_VERSION="0.26"
 CT_ISL_MIRRORS="https://libisl.sourceforge.io"
 CT_ISL_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -308,24 +294,12 @@ CT_ISL_later_than_0_18=y
 CT_ISL_0_18_or_later=y
 CT_ISL_later_than_0_15=y
 CT_ISL_0_15_or_later=y
-CT_COMP_LIBS_LIBICONV=y
-CT_COMP_LIBS_LIBICONV_PKG_KSYM="LIBICONV"
-CT_LIBICONV_DIR_NAME="libiconv"
-CT_LIBICONV_PKG_NAME="libiconv"
-CT_LIBICONV_SRC_RELEASE=y
-CT_LIBICONV_PATCH_ORDER="global"
-CT_LIBICONV_V_1_16=y
-CT_LIBICONV_VERSION="1.16"
-CT_LIBICONV_MIRRORS="$(CT_Mirrors GNU libiconv)"
-CT_LIBICONV_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_LIBICONV_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_LIBICONV_ARCHIVE_FORMATS=".tar.gz"
-CT_LIBICONV_SIGNATURE_FORMAT="packed/.sig"
 CT_COMP_LIBS_MPC=y
 CT_COMP_LIBS_MPC_PKG_KSYM="MPC"
 CT_MPC_DIR_NAME="mpc"
 CT_MPC_PKG_NAME="mpc"
 CT_MPC_SRC_RELEASE=y
+CT_MPC_PATCH_GLOBAL=y
 CT_MPC_PATCH_ORDER="global"
 CT_MPC_V_1_3=y
 CT_MPC_VERSION="1.3.1"
@@ -341,6 +315,7 @@ CT_COMP_LIBS_MPFR_PKG_KSYM="MPFR"
 CT_MPFR_DIR_NAME="mpfr"
 CT_MPFR_PKG_NAME="mpfr"
 CT_MPFR_SRC_RELEASE=y
+CT_MPFR_PATCH_GLOBAL=y
 CT_MPFR_PATCH_ORDER="global"
 CT_MPFR_V_4_2=y
 CT_MPFR_VERSION="4.2.1"
@@ -351,30 +326,12 @@ CT_MPFR_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz .zip"
 CT_MPFR_SIGNATURE_FORMAT="packed/.asc"
 CT_MPFR_later_than_4_0_0=y
 CT_MPFR_4_0_0_or_later=y
-CT_COMP_LIBS_NCURSES=y
-CT_COMP_LIBS_NCURSES_PKG_KSYM="NCURSES"
-CT_NCURSES_DIR_NAME="ncurses"
-CT_NCURSES_PKG_NAME="ncurses"
-CT_NCURSES_SRC_RELEASE=y
-CT_NCURSES_PATCH_ORDER="global"
-CT_NCURSES_V_6_1=y
-CT_NCURSES_VERSION="6.1"
-CT_NCURSES_MIRRORS="https://invisible-mirror.net/archives/ncurses $(CT_Mirrors GNU ncurses)"
-CT_NCURSES_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_NCURSES_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_NCURSES_ARCHIVE_FORMATS=".tar.gz"
-CT_NCURSES_SIGNATURE_FORMAT="packed/.sig"
-CT_NCURSES_NEW_ABI=y
-CT_NCURSES_HOST_CONFIG_ARGS=""
-CT_NCURSES_HOST_DISABLE_DB=y
-CT_NCURSES_HOST_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
-CT_NCURSES_TARGET_CONFIG_ARGS=""
-CT_NCURSES_TARGET_FALLBACKS=""
 CT_COMP_LIBS_ZLIB=y
 CT_COMP_LIBS_ZLIB_PKG_KSYM="ZLIB"
 CT_ZLIB_DIR_NAME="zlib"
 CT_ZLIB_PKG_NAME="zlib"
 CT_ZLIB_SRC_RELEASE=y
+CT_ZLIB_PATCH_GLOBAL=y
 CT_ZLIB_PATCH_ORDER="global"
 CT_ZLIB_V_1_2_13=y
 CT_ZLIB_VERSION="1.2.13"
@@ -388,6 +345,7 @@ CT_COMP_LIBS_ZSTD_PKG_KSYM="ZSTD"
 CT_ZSTD_DIR_NAME="zstd"
 CT_ZSTD_PKG_NAME="zstd"
 CT_ZSTD_SRC_RELEASE=y
+CT_ZSTD_PATCH_GLOBAL=y
 CT_ZSTD_PATCH_ORDER="global"
 CT_ZSTD_V_1_5_5=y
 CT_ZSTD_VERSION="1.5.5"
@@ -397,42 +355,16 @@ CT_ZSTD_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ZSTD_ARCHIVE_FORMATS=".tar.gz"
 CT_ZSTD_SIGNATURE_FORMAT="packed/.sig"
 CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP GNUPRUMCU ISL LIBELF LIBICONV MPC MPFR NCURSES NEWLIB_NANO PICOLIBC ZLIB ZSTD"
-CT_LIBICONV_NEEDED=y
-CT_GETTEXT_NEEDED=y
 CT_GMP_NEEDED=y
 CT_MPFR_NEEDED=y
 CT_ISL_NEEDED=y
 CT_MPC_NEEDED=y
-CT_EXPAT_NEEDED=y
-CT_NCURSES_NEEDED=y
 CT_ZLIB_NEEDED=y
 CT_ZSTD_NEEDED=y
-CT_LIBICONV=y
-CT_GETTEXT=y
 CT_GMP=y
 CT_MPFR=y
 CT_ISL=y
 CT_MPC=y
-CT_EXPAT=y
-CT_NCURSES=y
 CT_ZLIB=y
 CT_ZSTD=y
-CT_COMP_TOOLS_FOR_HOST=y
-CT_COMP_TOOLS_MAKE=y
-CT_COMP_TOOLS_MAKE_PKG_KSYM="MAKE"
-CT_MAKE_DIR_NAME="make"
-CT_MAKE_PKG_NAME="make"
-CT_MAKE_SRC_RELEASE=y
-CT_MAKE_PATCH_ORDER="global"
-CT_MAKE_V_4_4=y
-CT_MAKE_VERSION="4.4"
-CT_MAKE_MIRRORS="$(CT_Mirrors GNU make)"
-CT_MAKE_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_MAKE_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_MAKE_ARCHIVE_FORMATS=".tar.lz .tar.gz"
-CT_MAKE_SIGNATURE_FORMAT="packed/.sig"
-CT_MAKE_4_4_or_later=y
-CT_MAKE_4_4_or_older=y
-CT_MAKE_later_than_4_3=y
-CT_MAKE_4_3_or_later=y
 CT_ALL_COMP_TOOLS_CHOICES="AUTOCONF AUTOMAKE BISON DTC LIBTOOL M4 MAKE"
