--- a/configs/sh2eb-elf/host-x86_64-w64-mingw32.config
+++ b/configs/sh2eb-elf/host-x86_64-w64-mingw32.config
@@ -8,6 +8,7 @@ CT_CONFIGURE_has_ninja=y
 CT_CONFIGURE_has_rsync=y
 CT_CONFIGURE_has_make_3_81_or_newer=y
 CT_CONFIGURE_has_make_4_0_or_newer=y
+CT_CONFIGURE_has_make_4_4_or_newer=y
 CT_CONFIGURE_has_libtool_2_4_or_newer=y
 CT_CONFIGURE_has_libtoolize_2_4_or_newer=y
 CT_CONFIGURE_has_autoconf_2_65_or_newer=y
@@ -24,7 +25,7 @@ CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_VERSION="1.26.0.22_daf19e1"
+CT_VERSION="1.26.0.30_cd0d146"
 CT_VCHECK=""
 CT_CONFIG_VERSION_ENV="4"
 CT_CONFIG_VERSION_CURRENT="4"
@@ -40,6 +41,8 @@ CT_BUILD_DIR="${CT_BUILD_TOP_DIR}/build"
 CT_PREFIX_DIR="${CT_PREFIX:-${HOME}/.local/x-tools}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
 CT_RM_RF_PREFIX_DIR=y
 CT_REMOVE_DOCS=y
+CT_INSTALL_LICENSES=y
+CT_PREFIX_DIR_RO=n
 CT_STRIP_HOST_TOOLCHAIN_EXECUTABLES=y
 CT_STRIP_TARGET_TOOLCHAIN_EXECUTABLES=y
 CT_DOWNLOAD_AGENT_WGET=y
@@ -73,14 +76,13 @@ CT_ARCH_SH_SHOW=y
 CT_ARCH_SH_PKG_KSYM=""
 CT_ARCH_SH_SH2=y
 CT_ARCH_SH_VARIANT="sh2"
-CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
+CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 PARISC POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
 CT_ARCH_SUFFIX=""
 CT_OMIT_TARGET_VENDOR=y
 CT_ARCH_REQUIRES_MULTILIB=y
 CT_MULTILIB=y
 CT_ARCH_SUPPORTS_BOTH_MMU=n
 CT_ARCH_DEFAULT_HAS_MMU=n
-CT_ARCH_USE_MMU=n
 CT_ARCH_SUPPORTS_FLAT_FORMAT=y
 CT_ARCH_SUPPORTS_EITHER_ENDIAN=y
 CT_ARCH_DEFAULT_LE=y
@@ -93,6 +95,7 @@ CT_ARCH_32=y
 CT_ARCH_SUPPORTS_WITH_ENDIAN=y
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
+CT_SHOW_CT_VERSION=n
 CT_TOOLCHAIN_PKGVERSION=""
 CT_TOOLCHAIN_BUGURL="http://github.com/yaul-org/libyaul-build-scripts"
 CT_TARGET_ALIAS_SED_EXPR=""
@@ -102,6 +105,9 @@ CT_TOOLCHAIN_TYPE="canadian"
 CT_BUILD=""
 CT_BUILD_PREFIX=""
 CT_BUILD_SUFFIX=""
+CT_HOST="x86_64-w64-mingw32"
+CT_HOST_PREFIX=""
+CT_HOST_SUFFIX=""
 CT_BARE_METAL=y
 CT_KERNEL_BARE_METAL=y
 CT_KERNEL="bare-metal"
@@ -120,7 +126,6 @@ CT_BINUTILS_USE_GNU=y
 CT_BINUTILS_USE="BINUTILS"
 CT_BINUTILS_PKG_NAME="binutils"
 CT_BINUTILS_SRC_RELEASE=y
-CT_BINUTILS_PATCH_GLOBAL=y
 CT_BINUTILS_PATCH_ORDER="global"
 CT_BINUTILS_V_2_38=y
 CT_BINUTILS_VERSION="2.38"
@@ -140,6 +145,7 @@ CT_BINUTILS_2_26_or_later=y
 CT_BINUTILS_LINKER_LD=y
 CT_BINUTILS_LINKERS_LIST="ld"
 CT_BINUTILS_LINKER_DEFAULT="bfd"
+CT_BINUTILS_RELRO=m
 CT_BINUTILS_DETERMINISTIC_ARCHIVES=y
 CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 CT_ALL_BINUTILS_CHOICES="BINUTILS"
@@ -168,7 +174,6 @@ CT_GCC_USE_GNU=y
 CT_GCC_USE="GCC"
 CT_GCC_PKG_NAME="gcc"
 CT_GCC_SRC_RELEASE=y
-CT_GCC_PATCH_GLOBAL=y
 CT_GCC_PATCH_ORDER="global"
 CT_GCC_V_13=y
 CT_GCC_VERSION="13.2.0"
@@ -201,23 +206,26 @@ CT_CC_GCC_HAS_LIBMPX=y
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
 CT_CC_GCC_EXTRA_CONFIG_ARRAY="--disable-cld --disable-initfini-array --enable-largefile --disable-hosted-libstdcxx --disable-libstdc__-v3 --disable-libstdcxx-pch --disable-libstdcxx-threads --disable-libstdcxx-time --disable-objc-gc --disable-rpath --disable-dlopen --disable-shared --disable-threads --enable-tls --disable-win32-registry --disable-decimal-float --enable-cxx-flags"
 CT_CC_GCC_MULTILIB_LIST=""
+CT_CC_GCC_STATIC_LIBSTDCXX=n
+CT_CC_GCC_CONFIG_TLS=m
 CT_CC_GCC_USE_GRAPHITE=y
 CT_CC_GCC_USE_LTO=y
+CT_CC_GCC_LTO_ZSTD=m
+CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
 CT_CC_GCC_TM_CLONE_REGISTRY=m
 CT_CC_GCC_DISABLE_PCH=y
+CT_CC_GCC_LDBL_128=m
 CT_CC_GCC_LNK_HASH_STYLE_DEFAULT=y
 CT_CC_GCC_LNK_HASH_STYLE=""
 CT_CC_GCC_DEC_FLOATS_NO=y
 CT_CC_GCC_DEC_FLOATS="no"
 CT_ALL_CC_CHOICES="GCC"
 CT_CC_LANG_CXX=y
-CT_CC_LANG_OTHERS=""
 CT_DEBUG_GDB=y
 CT_DEBUG_GDB_PKG_KSYM="GDB"
 CT_GDB_DIR_NAME="gdb"
 CT_GDB_PKG_NAME="gdb"
 CT_GDB_SRC_RELEASE=y
-CT_GDB_PATCH_GLOBAL=y
 CT_GDB_PATCH_ORDER="global"
 CT_GDB_V_11=y
 CT_GDB_VERSION="11.2"
@@ -246,7 +254,6 @@ CT_COMP_LIBS_EXPAT_PKG_KSYM="EXPAT"
 CT_EXPAT_DIR_NAME="expat"
 CT_EXPAT_PKG_NAME="expat"
 CT_EXPAT_SRC_RELEASE=y
-CT_EXPAT_PATCH_GLOBAL=y
 CT_EXPAT_PATCH_ORDER="global"
 CT_EXPAT_V_2_5=y
 CT_EXPAT_VERSION="2.5.0"
@@ -260,7 +267,6 @@ CT_COMP_LIBS_GETTEXT_PKG_KSYM="GETTEXT"
 CT_GETTEXT_DIR_NAME="gettext"
 CT_GETTEXT_PKG_NAME="gettext"
 CT_GETTEXT_SRC_RELEASE=y
-CT_GETTEXT_PATCH_GLOBAL=y
 CT_GETTEXT_PATCH_ORDER="global"
 CT_GETTEXT_V_0_21=y
 CT_GETTEXT_VERSION="0.21"
@@ -277,7 +283,6 @@ CT_COMP_LIBS_GMP_PKG_KSYM="GMP"
 CT_GMP_DIR_NAME="gmp"
 CT_GMP_PKG_NAME="gmp"
 CT_GMP_SRC_RELEASE=y
-CT_GMP_PATCH_GLOBAL=y
 CT_GMP_PATCH_ORDER="global"
 CT_GMP_V_6_2=y
 CT_GMP_VERSION="6.2.1"
@@ -291,11 +296,10 @@ CT_COMP_LIBS_ISL_PKG_KSYM="ISL"
 CT_ISL_DIR_NAME="isl"
 CT_ISL_PKG_NAME="isl"
 CT_ISL_SRC_RELEASE=y
-CT_ISL_PATCH_GLOBAL=y
 CT_ISL_PATCH_ORDER="global"
 CT_ISL_V_0_24=y
 CT_ISL_VERSION="0.24"
-CT_ISL_MIRRORS="https://gcc.gnu.org/pub/gcc/infrastructure"
+CT_ISL_MIRRORS="https://libisl.sourceforge.io"
 CT_ISL_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
@@ -309,7 +313,6 @@ CT_COMP_LIBS_LIBICONV_PKG_KSYM="LIBICONV"
 CT_LIBICONV_DIR_NAME="libiconv"
 CT_LIBICONV_PKG_NAME="libiconv"
 CT_LIBICONV_SRC_RELEASE=y
-CT_LIBICONV_PATCH_GLOBAL=y
 CT_LIBICONV_PATCH_ORDER="global"
 CT_LIBICONV_V_1_16=y
 CT_LIBICONV_VERSION="1.16"
@@ -323,7 +326,6 @@ CT_COMP_LIBS_MPC_PKG_KSYM="MPC"
 CT_MPC_DIR_NAME="mpc"
 CT_MPC_PKG_NAME="mpc"
 CT_MPC_SRC_RELEASE=y
-CT_MPC_PATCH_GLOBAL=y
 CT_MPC_PATCH_ORDER="global"
 CT_MPC_V_1_3=y
 CT_MPC_VERSION="1.3.1"
@@ -339,7 +341,6 @@ CT_COMP_LIBS_MPFR_PKG_KSYM="MPFR"
 CT_MPFR_DIR_NAME="mpfr"
 CT_MPFR_PKG_NAME="mpfr"
 CT_MPFR_SRC_RELEASE=y
-CT_MPFR_PATCH_GLOBAL=y
 CT_MPFR_PATCH_ORDER="global"
 CT_MPFR_V_4_2=y
 CT_MPFR_VERSION="4.2.1"
@@ -355,7 +356,6 @@ CT_COMP_LIBS_NCURSES_PKG_KSYM="NCURSES"
 CT_NCURSES_DIR_NAME="ncurses"
 CT_NCURSES_PKG_NAME="ncurses"
 CT_NCURSES_SRC_RELEASE=y
-CT_NCURSES_PATCH_GLOBAL=y
 CT_NCURSES_PATCH_ORDER="global"
 CT_NCURSES_V_6_1=y
 CT_NCURSES_VERSION="6.1"
@@ -375,7 +375,6 @@ CT_COMP_LIBS_ZLIB_PKG_KSYM="ZLIB"
 CT_ZLIB_DIR_NAME="zlib"
 CT_ZLIB_PKG_NAME="zlib"
 CT_ZLIB_SRC_RELEASE=y
-CT_ZLIB_PATCH_GLOBAL=y
 CT_ZLIB_PATCH_ORDER="global"
 CT_ZLIB_V_1_2_13=y
 CT_ZLIB_VERSION="1.2.13"
@@ -384,6 +383,19 @@ CT_ZLIB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ZLIB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ZLIB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_ZLIB_SIGNATURE_FORMAT="packed/.asc"
+CT_COMP_LIBS_ZSTD=y
+CT_COMP_LIBS_ZSTD_PKG_KSYM="ZSTD"
+CT_ZSTD_DIR_NAME="zstd"
+CT_ZSTD_PKG_NAME="zstd"
+CT_ZSTD_SRC_RELEASE=y
+CT_ZSTD_PATCH_ORDER="global"
+CT_ZSTD_V_1_5_5=y
+CT_ZSTD_VERSION="1.5.5"
+CT_ZSTD_MIRRORS="https://github.com/facebook/zstd/releases/download/v${CT_ZSTD_VERSION} https://www.zstd.net/"
+CT_ZSTD_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
+CT_ZSTD_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
+CT_ZSTD_ARCHIVE_FORMATS=".tar.gz"
+CT_ZSTD_SIGNATURE_FORMAT="packed/.sig"
 CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP GNUPRUMCU ISL LIBELF LIBICONV MPC MPFR NCURSES NEWLIB_NANO PICOLIBC ZLIB ZSTD"
 CT_LIBICONV_NEEDED=y
 CT_GETTEXT_NEEDED=y
@@ -394,6 +406,7 @@ CT_MPC_NEEDED=y
 CT_EXPAT_NEEDED=y
 CT_NCURSES_NEEDED=y
 CT_ZLIB_NEEDED=y
+CT_ZSTD_NEEDED=y
 CT_LIBICONV=y
 CT_GETTEXT=y
 CT_GMP=y
@@ -403,13 +416,13 @@ CT_MPC=y
 CT_EXPAT=y
 CT_NCURSES=y
 CT_ZLIB=y
+CT_ZSTD=y
 CT_COMP_TOOLS_FOR_HOST=y
 CT_COMP_TOOLS_MAKE=y
 CT_COMP_TOOLS_MAKE_PKG_KSYM="MAKE"
 CT_MAKE_DIR_NAME="make"
 CT_MAKE_PKG_NAME="make"
 CT_MAKE_SRC_RELEASE=y
-CT_MAKE_PATCH_GLOBAL=y
 CT_MAKE_PATCH_ORDER="global"
 CT_MAKE_V_4_4=y
 CT_MAKE_VERSION="4.4"
@@ -423,6 +436,3 @@ CT_MAKE_4_4_or_older=y
 CT_MAKE_later_than_4_3=y
 CT_MAKE_4_3_or_later=y
 CT_ALL_COMP_TOOLS_CHOICES="AUTOCONF AUTOMAKE BISON DTC LIBTOOL M4 MAKE"
-CT_HOST="x86_64-w64-mingw32"
-CT_HOST_PREFIX=""
-CT_HOST_SUFFIX=""
