--- a/configs/sh2eb-elf/native-linux.config
+++ b/configs/sh2eb-elf/native-linux.config
@@ -95,8 +95,9 @@ CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
 CT_WANTS_STATIC_LINK=y
 CT_WANTS_STATIC_LINK_CXX=y
+CT_STATIC_TOOLCHAIN=y
 CT_TOOLCHAIN_PKGVERSION=""
-CT_TOOLCHAIN_BUGURL="http://github.com/yaul-org/libyaul-build-scripts"
+CT_TOOLCHAIN_BUGURL="https://github.com/yaul-org/libyaul-build-scripts"
 CT_TARGET_ALIAS_SED_EXPR=""
 CT_TARGET_ALIAS=""
 CT_CROSS=y
