--- a/configs/sh2eb-elf/host-x86_64-w64-mingw32.config
+++ b/configs/sh2eb-elf/host-x86_64-w64-mingw32.config
@@ -97,7 +97,7 @@ CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
 CT_SHOW_CT_VERSION=n
 CT_TOOLCHAIN_PKGVERSION=""
-CT_TOOLCHAIN_BUGURL="http://github.com/yaul-org/libyaul-build-scripts"
+CT_TOOLCHAIN_BUGURL="https://github.com/yaul-org/libyaul-build-scripts"
 CT_TARGET_ALIAS_SED_EXPR=""
 CT_TARGET_ALIAS=""
 CT_CANADIAN=y
