--- a/configs/sh2eb-elf/host-i686-pc-linux-gnu.config
+++ b/configs/sh2eb-elf/host-i686-pc-linux-gnu.config
@@ -95,7 +95,7 @@ CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
 CT_WANTS_STATIC_LINK=y
 CT_TOOLCHAIN_PKGVERSION=""
-CT_TOOLCHAIN_BUGURL="http://github.com/yaul-org/libyaul-build-scripts"
+CT_TOOLCHAIN_BUGURL="https://github.com/yaul-org/libyaul-build-scripts"
 CT_TARGET_ALIAS_SED_EXPR=""
 CT_TARGET_ALIAS=""
 CT_CANADIAN=y
