--- a/configs/helpers/target-x86_64-w64-mingw32.config
+++ b/configs/helpers/target-x86_64-w64-mingw32.config
@@ -189,14 +189,14 @@ CT_CREATE_LDSO_CONF=y
 CT_LDSO_CONF_EXTRA_DIRS_ARRAY=""
 CT_LIBC_XLDD=y
 CT_CC_CORE_NEEDED=y
-CT_CC_SUPPORT_CXX=y
-CT_CC_SUPPORT_FORTRAN=y
-CT_CC_SUPPORT_ADA=y
-CT_CC_SUPPORT_D=y
-CT_CC_SUPPORT_JIT=y
-CT_CC_SUPPORT_OBJC=y
-CT_CC_SUPPORT_OBJCXX=y
-CT_CC_SUPPORT_GOLANG=y
+CT_CC_SUPPORT_CXX=n
+CT_CC_SUPPORT_FORTRAN=n
+CT_CC_SUPPORT_ADA=n
+CT_CC_SUPPORT_D=n
+CT_CC_SUPPORT_JIT=n
+CT_CC_SUPPORT_OBJC=n
+CT_CC_SUPPORT_OBJCXX=n
+CT_CC_SUPPORT_GOLANG=n
 CT_CC_GCC=y
 CT_CC="gcc"
 CT_CC_CHOICE_KSYM="GCC"
@@ -367,4 +367,3 @@ CT_ISL=y
 CT_MPC=y
 CT_ZLIB=y
 CT_ZSTD=y
-CT_ALL_COMP_TOOLS_CHOICES="AUTOCONF AUTOMAKE BISON DTC LIBTOOL M4 MAKE"
