--- a/configs/helpers/target-i686-pc-linux-gnu.config
+++ b/configs/helpers/target-i686-pc-linux-gnu.config
@@ -263,13 +263,13 @@ CT_LDSO_CONF_EXTRA_DIRS_ARRAY=""
 CT_LIBC_XLDD=y
 CT_CC_CORE_NEEDED=y
 CT_CC_SUPPORT_CXX=y
-CT_CC_SUPPORT_FORTRAN=y
-CT_CC_SUPPORT_ADA=y
-CT_CC_SUPPORT_D=y
-CT_CC_SUPPORT_JIT=y
-CT_CC_SUPPORT_OBJC=y
-CT_CC_SUPPORT_OBJCXX=y
-CT_CC_SUPPORT_GOLANG=y
+CT_CC_SUPPORT_FORTRAN=n
+CT_CC_SUPPORT_ADA=n
+CT_CC_SUPPORT_D=n
+CT_CC_SUPPORT_JIT=n
+CT_CC_SUPPORT_OBJC=n
+CT_CC_SUPPORT_OBJCXX=n
+CT_CC_SUPPORT_GOLANG=n
 CT_CC_GCC=y
 CT_CC="gcc"
 CT_CC_CHOICE_KSYM="GCC"
@@ -467,23 +467,3 @@ CT_ISL=y
 CT_MPC=y
 CT_NCURSES=y
 CT_ZLIB=y
-CT_COMP_TOOLS_MAKE=y
-CT_COMP_TOOLS_MAKE_PKG_KSYM="MAKE"
-CT_MAKE_DIR_NAME="make"
-CT_MAKE_PKG_NAME="make"
-CT_MAKE_SRC_RELEASE=y
-CT_MAKE_PATCH_ORDER="global"
-CT_MAKE_V_4_3=y
-CT_MAKE_VERSION="4.3"
-CT_MAKE_MIRRORS="$(CT_Mirrors GNU make)"
-CT_MAKE_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_MAKE_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_MAKE_ARCHIVE_FORMATS=".tar.lz .tar.gz"
-CT_MAKE_SIGNATURE_FORMAT="packed/.sig"
-CT_MAKE_4_4_or_older=y
-CT_MAKE_older_than_4_4=y
-CT_MAKE_REQUIRE_older_than_4_4=y
-CT_MAKE_4_3_or_later=y
-CT_MAKE_4_3_or_older=y
-CT_MAKE_GNUMAKE_SYMLINK=y
-CT_ALL_COMP_TOOLS_CHOICES="AUTOCONF AUTOMAKE BISON DTC LIBTOOL M4 MAKE"
