--- a/configs/sh2eb-elf/native-linux.config
+++ b/configs/sh2eb-elf/native-linux.config
@@ -40,7 +40,7 @@ CT_PREFIX_DIR="${CT_PREFIX:-${HOME}/.local/x-tools}/${CT_HOST:+HOST-${CT_HOST}/}
 CT_RM_RF_PREFIX_DIR=y
 CT_REMOVE_DOCS=y
 CT_INSTALL_LICENSES=y
-CT_PREFIX_DIR_RO=y
+CT_PREFIX_DIR_RO=n
 CT_STRIP_HOST_TOOLCHAIN_EXECUTABLES=y
 CT_STRIP_TARGET_TOOLCHAIN_EXECUTABLES=y
 CT_DOWNLOAD_AGENT_WGET=y
@@ -79,8 +79,8 @@ CT_ARCH_SUFFIX=""
 CT_OMIT_TARGET_VENDOR=y
 CT_ARCH_REQUIRES_MULTILIB=y
 CT_MULTILIB=y
-CT_ARCH_SUPPORTS_BOTH_MMU=y
-CT_ARCH_DEFAULT_HAS_MMU=y
+CT_ARCH_SUPPORTS_BOTH_MMU=n
+CT_ARCH_DEFAULT_HAS_MMU=n
 CT_ARCH_SUPPORTS_FLAT_FORMAT=y
 CT_ARCH_SUPPORTS_EITHER_ENDIAN=y
 CT_ARCH_DEFAULT_LE=y
@@ -93,6 +93,7 @@ CT_ARCH_32=y
 CT_ARCH_SUPPORTS_WITH_ENDIAN=y
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
+CT_SHOW_CT_VERSION=n
 CT_WANTS_STATIC_LINK=y
 CT_WANTS_STATIC_LINK_CXX=y
 CT_STATIC_TOOLCHAIN=y
@@ -154,13 +155,13 @@ CT_LIBC_NONE_SHOW=y
 CT_LIBC_NONE_PKG_KSYM=""
 CT_ALL_LIBC_CHOICES="AVR_LIBC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE PICOLIBC UCLIBC_NG"
 CT_CC_SUPPORT_CXX=y
-CT_CC_SUPPORT_FORTRAN=y
-CT_CC_SUPPORT_ADA=y
-CT_CC_SUPPORT_D=y
-CT_CC_SUPPORT_JIT=y
-CT_CC_SUPPORT_OBJC=y
-CT_CC_SUPPORT_OBJCXX=y
-CT_CC_SUPPORT_GOLANG=y
+CT_CC_SUPPORT_FORTRAN=n
+CT_CC_SUPPORT_ADA=n
+CT_CC_SUPPORT_D=n
+CT_CC_SUPPORT_JIT=n
+CT_CC_SUPPORT_OBJC=n
+CT_CC_SUPPORT_OBJCXX=n
+CT_CC_SUPPORT_GOLANG=n
 CT_CC_GCC=y
 CT_CC="gcc"
 CT_CC_CHOICE_KSYM="GCC"
@@ -414,22 +415,3 @@ CT_EXPAT=y
 CT_NCURSES=y
 CT_ZLIB=y
 CT_ZSTD=y
-CT_COMP_TOOLS_FOR_HOST=y
-CT_COMP_TOOLS_MAKE=y
-CT_COMP_TOOLS_MAKE_PKG_KSYM="MAKE"
-CT_MAKE_DIR_NAME="make"
-CT_MAKE_PKG_NAME="make"
-CT_MAKE_SRC_RELEASE=y
-CT_MAKE_PATCH_ORDER="global"
-CT_MAKE_V_4_4=y
-CT_MAKE_VERSION="4.4"
-CT_MAKE_MIRRORS="$(CT_Mirrors GNU make)"
-CT_MAKE_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_MAKE_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_MAKE_ARCHIVE_FORMATS=".tar.lz .tar.gz"
-CT_MAKE_SIGNATURE_FORMAT="packed/.sig"
-CT_MAKE_4_4_or_later=y
-CT_MAKE_4_4_or_older=y
-CT_MAKE_later_than_4_3=y
-CT_MAKE_4_3_or_later=y
-CT_ALL_COMP_TOOLS_CHOICES="AUTOCONF AUTOMAKE BISON DTC LIBTOOL M4 MAKE"
