--- a/configs/sh2eb-elf/native-linux.config
+++ b/configs/sh2eb-elf/native-linux.config
@@ -5,10 +5,8 @@ CT_CONFIGURE_has_wget=y
 CT_CONFIGURE_has_curl=y
 CT_CONFIGURE_has_meson=y
 CT_CONFIGURE_has_ninja=y
-CT_CONFIGURE_has_rsync=y
 CT_CONFIGURE_has_make_3_81_or_newer=y
 CT_CONFIGURE_has_make_4_0_or_newer=y
-CT_CONFIGURE_has_make_4_4_or_newer=y
 CT_CONFIGURE_has_libtool_2_4_or_newer=y
 CT_CONFIGURE_has_libtoolize_2_4_or_newer=y
 CT_CONFIGURE_has_autoconf_2_65_or_newer=y
@@ -19,18 +17,20 @@ CT_CONFIGURE_has_python_3_4_or_newer=y
 CT_CONFIGURE_has_bison_2_7_or_newer=y
 CT_CONFIGURE_has_bison_3_0_4_or_newer=y
 CT_CONFIGURE_has_python=y
+CT_CONFIGURE_has_svn=y
 CT_CONFIGURE_has_git=y
 CT_CONFIGURE_has_md5sum=y
 CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_VERSION="1.26.0.30_cd0d146"
+CT_VERSION="1.27.0.68_b286f6b"
 CT_VCHECK=""
 CT_CONFIG_VERSION_ENV="4"
 CT_CONFIG_VERSION_CURRENT="4"
 CT_CONFIG_VERSION="4"
 CT_MODULES=y
+CT_EXPERIMENTAL=y
 CT_LOCAL_TARBALLS_DIR="${HOME}/src"
 CT_SAVE_TARBALLS=y
 CT_WORK_DIR="${CT_TOP_DIR}/.build"
@@ -39,9 +39,9 @@ CT_BUILD_DIR="${CT_BUILD_TOP_DIR}/build"
 CT_PREFIX_DIR="${CT_PREFIX:-${HOME}/.local/x-tools}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
 CT_RM_RF_PREFIX_DIR=y
 CT_REMOVE_DOCS=y
+CT_STRIP_HOST_TOOLCHAIN_EXECUTABLES=y
 CT_INSTALL_LICENSES=y
 CT_PREFIX_DIR_RO=n
-CT_STRIP_HOST_TOOLCHAIN_EXECUTABLES=y
 CT_STRIP_TARGET_TOOLCHAIN_EXECUTABLES=y
 CT_DOWNLOAD_AGENT_WGET=y
 CT_CONNECT_TIMEOUT=10
@@ -74,13 +74,12 @@ CT_ARCH_SH_SHOW=y
 CT_ARCH_SH_PKG_KSYM=""
 CT_ARCH_SH_SH2=y
 CT_ARCH_SH_VARIANT="sh2"
-CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 PARISC POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
+CT_ARCH_SH_FLOAT_SUFFIX=""
+CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LM32 LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 OPENRISC PARISC POWERPC PRU RISCV RX S390 SH SPARC TRICORE X86 XTENSA"
 CT_ARCH_SUFFIX=""
 CT_OMIT_TARGET_VENDOR=y
 CT_ARCH_REQUIRES_MULTILIB=y
 CT_MULTILIB=y
-CT_ARCH_SUPPORTS_BOTH_MMU=n
-CT_ARCH_DEFAULT_HAS_MMU=n
 CT_ARCH_SUPPORTS_FLAT_FORMAT=y
 CT_ARCH_SUPPORTS_EITHER_ENDIAN=y
 CT_ARCH_DEFAULT_LE=y
@@ -93,12 +92,10 @@ CT_ARCH_32=y
 CT_ARCH_SUPPORTS_WITH_ENDIAN=y
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
-CT_SHOW_CT_VERSION=n
 CT_WANTS_STATIC_LINK=y
 CT_WANTS_STATIC_LINK_CXX=y
-CT_STATIC_TOOLCHAIN=y
 CT_TOOLCHAIN_PKGVERSION=""
-CT_TOOLCHAIN_BUGURL="https://github.com/yaul-org/libyaul-build-scripts"
+CT_TOOLCHAIN_BUGURL="http://github.com/yaul-org/libyaul-build-scripts"
 CT_TARGET_ALIAS_SED_EXPR=""
 CT_TARGET_ALIAS=""
 CT_CROSS=y
@@ -124,14 +121,19 @@ CT_BINUTILS_USE_GNU=y
 CT_BINUTILS_USE="BINUTILS"
 CT_BINUTILS_PKG_NAME="binutils"
 CT_BINUTILS_SRC_RELEASE=y
+CT_BINUTILS_PATCH_GLOBAL=y
 CT_BINUTILS_PATCH_ORDER="global"
-CT_BINUTILS_V_2_40=y
-CT_BINUTILS_VERSION="2.40"
+CT_BINUTILS_V_2_44=y
+CT_BINUTILS_VERSION="2.44"
 CT_BINUTILS_MIRRORS="$(CT_Mirrors GNU binutils) $(CT_Mirrors sourceware binutils/releases)"
 CT_BINUTILS_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
 CT_BINUTILS_SIGNATURE_FORMAT="packed/.sig"
+CT_BINUTILS_2_44_or_later=y
+CT_BINUTILS_2_44_or_older=y
+CT_BINUTILS_later_than_2_41=y
+CT_BINUTILS_2_41_or_later=y
 CT_BINUTILS_later_than_2_39=y
 CT_BINUTILS_2_39_or_later=y
 CT_BINUTILS_later_than_2_30=y
@@ -172,14 +174,19 @@ CT_GCC_USE_GNU=y
 CT_GCC_USE="GCC"
 CT_GCC_PKG_NAME="gcc"
 CT_GCC_SRC_RELEASE=y
+CT_GCC_PATCH_GLOBAL=y
 CT_GCC_PATCH_ORDER="global"
-CT_GCC_V_13=y
-CT_GCC_VERSION="13.2.0"
+CT_GCC_V_14=y
+CT_GCC_VERSION="14.3.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GCC_SIGNATURE_FORMAT=""
+CT_GCC_15_or_older=y
+CT_GCC_older_than_15=y
+CT_GCC_later_than_14=y
+CT_GCC_14_or_later=y
 CT_GCC_later_than_13=y
 CT_GCC_13_or_later=y
 CT_GCC_later_than_12=y
@@ -202,14 +209,14 @@ CT_GCC_later_than_4_9=y
 CT_GCC_4_9_or_later=y
 CT_CC_GCC_HAS_LIBMPX=y
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
-CT_CC_GCC_EXTRA_CONFIG_ARRAY="--disable-cld --disable-initfini-array --enable-largefile --disable-hosted-libstdcxx --disable-libstdc__-v3 --disable-libstdcxx-pch --disable-libstdcxx-threads --disable-libstdcxx-time --disable-objc-gc --disable-rpath --disable-dlopen --disable-shared --disable-threads --enable-tls --disable-win32-registry --disable-decimal-float --enable-cxx-flags"
+CT_CC_GCC_EXTRA_CONFIG_ARRAY="--disable-cld --disable-initfini-array --disable-largefile --disable-hosted-libstdcxx --disable-libstdc__-v3 --disable-libstdcxx-pch --disable-libstdcxx-threads --disable-libstdcxx-time --disable-objc-gc --disable-rpath --disable-dlopen --disable-shared --disable-win32-registry --disable-decimal-float --enable-cxx-flags"
 CT_CC_GCC_MULTILIB_LIST=""
-CT_CC_GCC_STATIC_LIBSTDCXX=y
 CT_CC_GCC_CONFIG_TLS=m
 CT_CC_GCC_USE_GRAPHITE=y
 CT_CC_GCC_USE_LTO=y
 CT_CC_GCC_LTO_ZSTD=m
 CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
+CT_CC_GCC_LIBSTDCXX_TARGET_CXXFLAGS=""
 CT_CC_GCC_TM_CLONE_REGISTRY=m
 CT_CC_GCC_DISABLE_PCH=y
 CT_CC_GCC_LDBL_128=m
@@ -219,23 +226,32 @@ CT_CC_GCC_DEC_FLOATS_NO=y
 CT_CC_GCC_DEC_FLOATS="no"
 CT_ALL_CC_CHOICES="GCC"
 CT_CC_LANG_CXX=y
+CT_CC_LANG_OTHERS=""
+CT_ALL_LINKER_CHOICES="MOLD"
 CT_DEBUG_GDB=y
 CT_DEBUG_GDB_PKG_KSYM="GDB"
 CT_GDB_DIR_NAME="gdb"
 CT_GDB_PKG_NAME="gdb"
 CT_GDB_SRC_RELEASE=y
+CT_GDB_PATCH_GLOBAL=y
 CT_GDB_PATCH_ORDER="global"
-CT_GDB_V_11=y
-CT_GDB_VERSION="13.2"
+CT_GDB_V_16=y
+CT_GDB_VERSION="16.3"
 CT_GDB_MIRRORS="$(CT_Mirrors GNU gdb) $(CT_Mirrors sourceware gdb/releases)"
 CT_GDB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GDB_SIGNATURE_FORMAT=""
-CT_GDB_13_or_older=y
-CT_GDB_older_than_13=y
-CT_GDB_12_or_older=y
-CT_GDB_older_than_12=y
+CT_GDB_later_than_16=y
+CT_GDB_16_or_later=y
+CT_GDB_later_than_15=y
+CT_GDB_15_or_later=y
+CT_GDB_later_than_14=y
+CT_GDB_14_or_later=y
+CT_GDB_later_than_13=y
+CT_GDB_13_or_later=y
+CT_GDB_later_than_12=y
+CT_GDB_12_or_later=y
 CT_GDB_later_than_11=y
 CT_GDB_11_or_later=y
 CT_GDB_later_than_10=y
@@ -246,15 +262,17 @@ CT_GDB_CROSS=y
 CT_GDB_CROSS_STATIC=y
 CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
 CT_GDB_GDBSERVER_TOPLEVEL=y
+CT_GDB_CC_LD_LIBTOOL=y
 CT_ALL_DEBUG_CHOICES="DUMA GDB LTRACE STRACE"
 CT_COMP_LIBS_EXPAT=y
 CT_COMP_LIBS_EXPAT_PKG_KSYM="EXPAT"
 CT_EXPAT_DIR_NAME="expat"
 CT_EXPAT_PKG_NAME="expat"
 CT_EXPAT_SRC_RELEASE=y
+CT_EXPAT_PATCH_GLOBAL=y
 CT_EXPAT_PATCH_ORDER="global"
-CT_EXPAT_V_2_5=y
-CT_EXPAT_VERSION="2.5.0"
+CT_EXPAT_V_2_7=y
+CT_EXPAT_VERSION="2.7.1"
 CT_EXPAT_MIRRORS="http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION} https://github.com/libexpat/libexpat/releases/download/R_${CT_EXPAT_VERSION//./_}"
 CT_EXPAT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_EXPAT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -265,6 +283,7 @@ CT_COMP_LIBS_GETTEXT_PKG_KSYM="GETTEXT"
 CT_GETTEXT_DIR_NAME="gettext"
 CT_GETTEXT_PKG_NAME="gettext"
 CT_GETTEXT_SRC_RELEASE=y
+CT_GETTEXT_PATCH_GLOBAL=y
 CT_GETTEXT_PATCH_ORDER="global"
 CT_GETTEXT_V_0_21=y
 CT_GETTEXT_VERSION="0.21"
@@ -273,6 +292,8 @@ CT_GETTEXT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GETTEXT_SIGNATURE_FORMAT="packed/.sig"
+CT_GETTEXT_0_23_or_older=y
+CT_GETTEXT_older_than_0_23=y
 CT_GETTEXT_0_21_or_later=y
 CT_GETTEXT_0_21_or_older=y
 CT_GETTEXT_INCOMPATIBLE_WITH_UCLIBC_NG=y
@@ -281,19 +302,22 @@ CT_COMP_LIBS_GMP_PKG_KSYM="GMP"
 CT_GMP_DIR_NAME="gmp"
 CT_GMP_PKG_NAME="gmp"
 CT_GMP_SRC_RELEASE=y
+CT_GMP_PATCH_GLOBAL=y
 CT_GMP_PATCH_ORDER="global"
 CT_GMP_V_6_2=y
-CT_GMP_VERSION="6.3.0"
+CT_GMP_VERSION="6.2.1"
 CT_GMP_MIRRORS="https://gmplib.org/download/gmp https://gmplib.org/download/gmp/archive $(CT_Mirrors GNU gmp)"
 CT_GMP_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GMP_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GMP_ARCHIVE_FORMATS=".tar.xz .tar.lz .tar.bz2"
 CT_GMP_SIGNATURE_FORMAT="packed/.sig"
+CT_GMP_EXTRA_CFLAGS=""
 CT_COMP_LIBS_ISL=y
 CT_COMP_LIBS_ISL_PKG_KSYM="ISL"
 CT_ISL_DIR_NAME="isl"
 CT_ISL_PKG_NAME="isl"
 CT_ISL_SRC_RELEASE=y
+CT_ISL_PATCH_GLOBAL=y
 CT_ISL_PATCH_ORDER="global"
 CT_ISL_V_0_24=y
 CT_ISL_VERSION="0.24"
@@ -311,6 +335,7 @@ CT_COMP_LIBS_LIBICONV_PKG_KSYM="LIBICONV"
 CT_LIBICONV_DIR_NAME="libiconv"
 CT_LIBICONV_PKG_NAME="libiconv"
 CT_LIBICONV_SRC_RELEASE=y
+CT_LIBICONV_PATCH_GLOBAL=y
 CT_LIBICONV_PATCH_ORDER="global"
 CT_LIBICONV_V_1_16=y
 CT_LIBICONV_VERSION="1.16"
@@ -324,6 +349,7 @@ CT_COMP_LIBS_MPC_PKG_KSYM="MPC"
 CT_MPC_DIR_NAME="mpc"
 CT_MPC_PKG_NAME="mpc"
 CT_MPC_SRC_RELEASE=y
+CT_MPC_PATCH_GLOBAL=y
 CT_MPC_PATCH_ORDER="global"
 CT_MPC_V_1_3=y
 CT_MPC_VERSION="1.3.1"
@@ -332,13 +358,12 @@ CT_MPC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_MPC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_MPC_ARCHIVE_FORMATS=".tar.gz"
 CT_MPC_SIGNATURE_FORMAT="packed/.sig"
-CT_MPC_later_than_1_1_0=y
-CT_MPC_1_1_0_or_later=y
 CT_COMP_LIBS_MPFR=y
 CT_COMP_LIBS_MPFR_PKG_KSYM="MPFR"
 CT_MPFR_DIR_NAME="mpfr"
 CT_MPFR_PKG_NAME="mpfr"
 CT_MPFR_SRC_RELEASE=y
+CT_MPFR_PATCH_GLOBAL=y
 CT_MPFR_PATCH_ORDER="global"
 CT_MPFR_V_4_2=y
 CT_MPFR_VERSION="4.2.1"
@@ -347,13 +372,12 @@ CT_MPFR_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_MPFR_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_MPFR_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz .zip"
 CT_MPFR_SIGNATURE_FORMAT="packed/.asc"
-CT_MPFR_later_than_4_0_0=y
-CT_MPFR_4_0_0_or_later=y
 CT_COMP_LIBS_NCURSES=y
 CT_COMP_LIBS_NCURSES_PKG_KSYM="NCURSES"
 CT_NCURSES_DIR_NAME="ncurses"
 CT_NCURSES_PKG_NAME="ncurses"
 CT_NCURSES_SRC_RELEASE=y
+CT_NCURSES_PATCH_GLOBAL=y
 CT_NCURSES_PATCH_ORDER="global"
 CT_NCURSES_V_6_1=y
 CT_NCURSES_VERSION="6.1"
@@ -368,14 +392,16 @@ CT_NCURSES_HOST_DISABLE_DB=y
 CT_NCURSES_HOST_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
 CT_NCURSES_TARGET_CONFIG_ARGS=""
 CT_NCURSES_TARGET_FALLBACKS=""
+CT_NCURSES_EXTRA_CFLAGS=""
 CT_COMP_LIBS_ZLIB=y
 CT_COMP_LIBS_ZLIB_PKG_KSYM="ZLIB"
 CT_ZLIB_DIR_NAME="zlib"
 CT_ZLIB_PKG_NAME="zlib"
 CT_ZLIB_SRC_RELEASE=y
+CT_ZLIB_PATCH_GLOBAL=y
 CT_ZLIB_PATCH_ORDER="global"
-CT_ZLIB_V_1_2_13=y
-CT_ZLIB_VERSION="1.2.13"
+CT_ZLIB_V_1_3_1=y
+CT_ZLIB_VERSION="1.3.1"
 CT_ZLIB_MIRRORS="https://github.com/madler/zlib/releases/download/v${CT_ZLIB_VERSION} https://www.zlib.net/"
 CT_ZLIB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ZLIB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -386,10 +412,11 @@ CT_COMP_LIBS_ZSTD_PKG_KSYM="ZSTD"
 CT_ZSTD_DIR_NAME="zstd"
 CT_ZSTD_PKG_NAME="zstd"
 CT_ZSTD_SRC_RELEASE=y
+CT_ZSTD_PATCH_GLOBAL=y
 CT_ZSTD_PATCH_ORDER="global"
-CT_ZSTD_V_1_5_5=y
-CT_ZSTD_VERSION="1.5.5"
-CT_ZSTD_MIRRORS="https://github.com/facebook/zstd/releases/download/v${CT_ZSTD_VERSION} https://www.zstd.net/"
+CT_ZSTD_V_1_5_7=y
+CT_ZSTD_VERSION="1.5.7"
+CT_ZSTD_MIRRORS="https://github.com/facebook/zstd/releases/download/v${CT_ZSTD_VERSION} https://downloads.sourceforge.net/project/zstandard.mirror/v${CT_ZSTD_VERSION}"
 CT_ZSTD_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ZSTD_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ZSTD_ARCHIVE_FORMATS=".tar.gz"
@@ -415,3 +442,4 @@ CT_EXPAT=y
 CT_NCURSES=y
 CT_ZLIB=y
 CT_ZSTD=y
+CT_ALL_COMP_TOOLS_CHOICES="AUTOCONF AUTOMAKE BISON DTC LIBTOOL M4 MAKE"
